# txline-kit

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  goal.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.world/: ports.yml
apps/learn/: index.html  package.json  vite.config.ts
apps/learn/scripts/: postbuild-og.mjs
apps/learn/src/: App.tsx  Eyebrow.tsx  Feedback.tsx  Production.tsx  Story.tsx  data.test.ts  data.ts  feedback-data.ts  feedback.css  main.tsx  production-data.ts  responsive-fixes.css  story-data.ts  story.css  styles.css
crates/txline-kit-cpi/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/txline-kit-cpi/src/: lib.rs
crates/txline-kit-cpi/tests/: consumer_api.rs
docs/: dependency-upgrade-spike.md  mainnet-deployment.md  registry-publication-checklist.md  releasing.md  trec-v1.md
docs-site/: mkdocs.yml
docs-site/docs/: auth.md  cpi-crate.md  data.md  getting-started.md  index.md  keeper.md  onboarding-skill.md  onchain.md  proofs.md  replay-and-trec.md  safety-boundary.md  strategy-markets.md
fixtures/real/: README.md  asian-handicap.trec  goals-overunder.trec  match-result.trec
fixtures/real/raw/: scores-stream.jsonl
fixtures/synthetic/: match-42.trec  match-43.trec  match-44.trec
ops/: static-server.mjs  txline-kit-dev-web.service.in  txline-kit-prod.service.in
programs/txline-demo-escrow/: Cargo.toml  README.md
programs/txline-demo-escrow/idl/: txline_demo_escrow.json
programs/txline-demo-escrow/src/: lib.rs
proof/phase-0/: README.md  UAT.md  pr-body.md
proof/phase-1/: README.md  UAT.md  pr-body.md
proof/phase-2/: README.md  UAT.md  pr-body.md
proof/phase-3/: README.md  UAT.md  pr-body.md
proof/phase-4/: README.md  UAT.md  pr-body.md
proof/phase-5/: README.md  UAT.md  pr-body.md
proof/phase-6/: README.md  UAT.md  pr-body.md
proof/phase-7/: README.md  UAT.md  pr-body.md
proof/phase-8/: README.md  UAT.md  pr-body.md
scripts/: build-real-fixtures.mjs  create-synthetic-fixture.mjs  declared-port.mjs  proof-report.mjs  release-smoke.mjs
skills/txline-kit-onboarding/: SKILL.md
test/e2e/: learn.spec.ts  proof.spec.ts
