[workspace]
members = ["crates/txline-kit-cpi"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPulsePlay/txline-kit"
rust-version = "1.85"

[workspace.dependencies]
anchor-lang = "=0.32.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
