[workspace]
members = ["crates/txline-kit-cpi", "programs/txline-demo-escrow"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPulsePlay/txline-kit"
rust-version = "1.85"

[workspace.dependencies]
anchor-lang = "=0.32.1"
anchor-spl = { version = "=0.32.1", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
